--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,6 +1,20 @@
+@font-face {
+    font-family: 'Maven Pro';
+    font-weight: 400;
+    font-style: normal;
+}
+
 html {
     background-size: cover;
 }
 
 body{
+    padding: 0;
+    margin: 0;
+    font-family: "system-ui";
+    background-color: #85858533;
 }
+
+::-webkit-scrollbar {
+    width: 0;
+  }
